--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "ele:dev": "node script/build --env=development --watch"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1"
+    "vue": "^3.0.0-rc.8"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^5.0.2",
-    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "@vue/compiler-sfc": "^3.0.0-rc.8",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
@@ -29,6 +28,7 @@
     "electron-is-dev": "^1.2.0",
     "minimist": "^1.2.5",
     "ora": "^5.0.0",
+    "rollup-plugin-esbuild": "^2.4.2",
     "typescript": "^3.9.7",
     "vite": "^1.0.0-rc.1",
     "wait-on": "^5.2.0"
