chore: script 部分改成 ts

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "npm run dev:all",
     "dev:all": "concurrently -n=vue,ele -c=green,blue \"npm run dev:vue\" \"npm run dev:ele\"",
     "dev:vue": "vite",
-    "dev:ele": "node script/build --env=development --watch",
+    "dev:ele": "node -r ts-node/register script/build --env=development --watch",
     "build:vue": "vite build",
-    "build:ele": "node script/build --env=production",
+    "build:ele": "node -r ts-node/register script/build --env=production",
     "build": "rm -rf dist && npm run build:vue && npm run build:ele && electron-builder"
   },
   "build": {
@@ -51,6 +51,8 @@
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@types/minimist": "^1.2.1",
+    "@types/wait-on": "^5.2.0",
     "@vue/compiler-sfc": "^3.0.0",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
@@ -61,6 +63,7 @@
     "minimist": "^1.2.5",
     "ora": "^5.0.0",
     "rollup-plugin-esbuild": "^2.4.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.3",
     "vite": "^1.0.0-rc.4",
     "wait-on": "^5.2.0"
