--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "electron-store": "^6.0.0",
     "minimist": "^1.2.5",
     "ora": "^5.0.0",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-esbuild": "^2.4.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.0.3",
