--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/minimist": "^1.2.1",
-    "@types/wait-on": "^5.2.0",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
@@ -66,7 +65,8 @@
     "ora": "^5.0.0",
     "rimraf": "^3.0.2",
     "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-esbuild": "^2.4.2",
+    "rollup-plugin-esbuild": "^2.6.1",
+    "rollup-plugin-node-externals": "^2.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "vite": "^2.0.0"
