ix: rollup-plugin-esbuild tsconfig.json check

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "strict": true,
     "paths": {
       "@/*": ["src/render/*"],
-      "@root/*": ["./*"],
+      "@root/*": ["./*"]
     },
     "allowSyntheticDefaultImports": true
   },
