--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:all": "concurrently -n=vue,ele -c=green,blue \"npm run dev:vue\" \"npm run dev:ele\"",
     "dev:vue": "vite",
     "dev:ele": "node -r ts-node/register script/build --env=development --watch",
-    "build:vue": "vuedx-typecheck . && vite build",
+    "build:vue": "vite build",
     "build:ele": "node -r ts-node/register script/build --env=production",
     "build": "rimraf dist && npm run build:vue && npm run build:ele && electron-builder"
   },
@@ -54,8 +54,6 @@
     "@types/minimist": "^1.2.1",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
-    "@vuedx/typecheck": "^0.6.0",
-    "@vuedx/typescript-plugin-vue": "^0.6.0",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
     "electron": "11.2.3",
