--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "strict": true,
     "paths": {
       "@/*": ["src/render/*"],
+      "@src/*": ["src/*"],
       "@root/*": ["./*"]
     },
     "allowSyntheticDefaultImports": true
