chore: 国内打包镜像

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "directories": {
       "output": "release/${version}"
     },
+    "electronDownload": {
+      "mirror": "https://npm.taobao.org/mirrors/electron/"
+    },
     "files": [
       "!node_modules",
       "dist/**"
