--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
-    "ant-design-vue": "^2.0.0",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.3"
+    "ant-design-vue": "^2.0.1",
+    "vue": "^3.0.7",
+    "vue-router": "^4.0.5"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
@@ -68,26 +68,27 @@
     "@types/minimist": "^1.2.1",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vitejs/plugin-vue-jsx": "^1.1.0",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@vue/compiler-sfc": "^3.0.7",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
-    "electron": "11.2.3",
+    "electron": "12.0.1",
     "electron-builder": "^22.8.0",
     "electron-store": "^7.0.2",
     "less": "^4.1.1",
     "minimist": "^1.2.5",
     "ora": "^5.0.0",
     "rimraf": "^3.0.2",
-    "rollup-plugin-esbuild": "^2.6.1",
+    "rollup-plugin-esbuild": "^3.0.2",
     "rollup-plugin-node-externals": "^2.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0"
+    "vite": "^2.1.2"
   },
   "keywords": [
     "vite",
     "electron",
     "vue3",
-    "rollup"
+    "rollup",
+    "ant-design-vue"
   ]
 }
