--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "npm run dev:all",
     "dev:all": "concurrently -n=vue,ele -c=green,blue \"npm run dev:vue\" \"npm run dev:ele\"",
     "dev:vue": "vite",
-    "dev:ele": "node -r ts-node/register script/build --env=development --watch",
+    "dev:ele": "node -r ts-node/register script/build-main --env=development --watch",
     "build:vue": "vite build",
-    "build:ele": "node -r ts-node/register script/build --env=production",
+    "build:ele": "node -r ts-node/register script/build-main --env=production",
     "build": "rimraf dist && npm run build:vue && npm run build:ele && electron-builder"
   },
   "build": {
