--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "rollup-plugin-esbuild": "^4.2.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
-    "vite": "^2.2.4"
+    "vite": "^2.2.4",
+    "vitejs-plugin-electron": "^0.0.4"
   },
   "keywords": [
     "vite",
