--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
-    "ant-design-vue": "^2.0.1",
-    "vue": "^3.0.11",
-    "vue-router": "^4.0.5"
+    "ant-design-vue": "^2.2.0-beta.4",
+    "vue": "^3.1.1",
+    "vue-router": "^4.0.10"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
@@ -68,12 +68,12 @@
     "@types/minimist": "^1.2.1",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vitejs/plugin-vue-jsx": "^1.1.0",
-    "@vue/compiler-sfc": "^3.0.11",
+    "@vue/compiler-sfc": "^3.1.1",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
-    "electron": "12.0.2",
+    "electron": "13.1.3",
     "electron-builder": "^22.8.0",
-    "electron-store": "^7.0.2",
+    "electron-store": "^8.0.0",
     "less": "^4.1.1",
     "minimist": "^1.2.5",
     "ora": "^5.0.0",
@@ -81,8 +81,8 @@
     "rollup-plugin-esbuild": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
-    "vite": "^2.3.4",
-    "vitejs-plugin-electron": "^0.1.2"
+    "vite": "^2.3.8",
+    "vitejs-plugin-electron": "^0.1.3"
   },
   "keywords": [
     "vite",
