--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "license": "MIT",
   "scripts": {
     "dev": "npm run dev:all",
-    "dev:all": "concurrently -n=vue,ele -c=green,blue \"npm run dev:vue\" \"npm run dev:ele\"",
+    "dev:all": "concurrently -n=vue,pre,ele -c=green,blue \"npm run dev:vue\" \"npm run dev:pre\" \"npm run dev:ele\"",
     "dev:vue": "vite",
+    "dev:pre": "node -r ts-node/register script/build-preload --env=development --watch",
     "dev:ele": "node -r ts-node/register script/build-main --env=development --watch",
     "build:vue": "vite build",
+    "build:pre": "node -r ts-node/register script/build-preload --env=production",
     "build:ele": "node -r ts-node/register script/build-main --env=production",
-    "build": "rimraf dist && npm run build:vue && npm run build:ele && electron-builder"
+    "build": "rimraf dist && npm run build:vue && npm run build:pre && npm run build:ele && electron-builder"
   },
   "build": {
     "appId": "308487730@qq.com",
-    "asar": false,
+    "asar": true,
     "directories": {
       "output": "release/${version}"
     },
@@ -52,7 +54,7 @@
     }
   },
   "dependencies": {
-    "vue": "^3.1.2"
+    "vue": "^3.1.5"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
@@ -61,8 +63,8 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/minimist": "^1.2.1",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.1.2",
+    "@vitejs/plugin-vue": "^1.3.0",
+    "@vue/compiler-sfc": "^3.1.5",
     "acorn": "^8.2.4",
     "chalk": "^4.1.0",
     "concurrently": "^6.0.0",
@@ -75,7 +77,7 @@
     "rollup-plugin-esbuild": "^4.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.4",
-    "vite": "^2.3.8",
+    "vite": "^2.4.4",
     "vitejs-plugin-electron": "^0.1.3"
   },
   "keywords": [
