--- a/package.json
+++ b/package.json
@@ -81,8 +81,7 @@
     "rollup-plugin-esbuild": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
-    "vite": "^2.3.8",
-    "vitejs-plugin-electron": "^0.1.3"
+    "vite": "^2.3.8"
   },
   "keywords": [
     "vite",
