--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
-    "ant-design-vue": "^2.2.0-beta.4",
-    "vue": "^3.1.1",
-    "vue-router": "^4.0.10"
+    "ant-design-vue": "^2.2.6",
+    "vue": "^3.2.8",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
@@ -66,9 +66,9 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@types/minimist": "^1.2.1",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vitejs/plugin-vue-jsx": "^1.1.5",
-    "@vue/compiler-sfc": "^3.1.1",
+    "@vitejs/plugin-vue": "^1.6.0",
+    "@vitejs/plugin-vue-jsx": "^1.1.7",
+    "@vue/compiler-sfc": "^3.2.8",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
     "electron": "13.1.3",
@@ -78,10 +78,9 @@
     "minimist": "^1.2.5",
     "ora": "^5.0.0",
     "rimraf": "^3.0.2",
-    "rollup-plugin-esbuild": "^3.0.2",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "vite": "^2.3.8"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2",
+    "vite": "^2.5.3"
   },
   "keywords": [
     "vite",
