--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@vue/compiler-sfc": "^3.2.8",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
-    "electron": "14.0.0",
+    "electron": "15.0.0-beta.3",
     "electron-builder": "^22.8.0",
     "electron-store": "^8.0.0",
     "less": "^4.1.1",
