--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^3.0.0",
     "@rollup/plugin-typescript": "^8.2.5",
     "@types/minimist": "^1.2.1",
     "@vitejs/plugin-vue": "^1.6.0",
@@ -79,7 +80,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
-    "vite": "^2.5.3"
+    "vite": "^2.5.3",
+    "vite-plugin-components": "^0.13.3"
   },
   "keywords": [
     "vite",
