--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "npm run dev:all",
-    "dev:all": "concurrently -n=vue,pre,ele -c=green,blue \"npm run dev:vue\" \"npm run dev:pre\" \"npm run dev:ele\"",
-    "dev:vue": "vite",
-    "dev:pre": "node -r ts-node/register script/build-preload --env=development --watch",
-    "dev:ele": "node -r ts-node/register script/build-main --env=development --watch",
-    "build:vue": "vite build",
-    "build:pre": "node -r ts-node/register script/build-preload --env=production",
-    "build:ele": "node -r ts-node/register script/build-main --env=production",
-    "build": "rimraf dist && npm run build:vue && npm run build:pre && npm run build:ele && electron-builder"
+    "dev": "concurrently -n=R,P,M -c=green,yellow,blue \"npm run dev:render\" \"npm run dev:preload\" \"npm run dev:main\"",
+    "dev:render": "vite",
+    "dev:preload": "node -r ts-node/register script/build-preload --env=development --watch",
+    "dev:main": "node -r ts-node/register script/build-main --env=development --watch",
+    "//": "---------------------------------------------------------------------------------------------------",
+    "build:render": "vite build",
+    "build:preload": "node -r ts-node/register script/build-preload --env=production",
+    "build:main": "node -r ts-node/register script/build-main --env=production",
+    "build": "rimraf dist && npm run build:render && npm run build:preload && npm run build:main && electron-builder"
   },
   "build": {
     "appId": "308487730@qq.com",
@@ -25,10 +25,6 @@
       "!node_modules",
       "dist/**"
     ],
-    "extraResources": {
-      "from": "src/preload",
-      "to": "app/src/preload"
-    },
     "mac": {
       "artifactName": "${productName}_${version}.${ext}",
       "target": [
@@ -54,18 +50,18 @@
     }
   },
   "dependencies": {
-    "vue": "^3.1.5"
+    "vue": "^3.2.11"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.2.1",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "^8.2.5",
     "@types/minimist": "^1.2.1",
     "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.1.5",
-    "acorn": "^8.2.4",
+    "@vue/compiler-sfc": "^3.2.11",
     "chalk": "^4.1.0",
     "concurrently": "^6.0.0",
     "electron": "13.1.4",
@@ -74,11 +70,9 @@
     "minimist": "^1.2.5",
     "ora": "^5.4.0",
     "rimraf": "^3.0.2",
-    "rollup-plugin-esbuild": "^4.5.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.3.4",
-    "vite": "^2.4.4",
-    "vitejs-plugin-electron": "^0.1.5"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2",
+    "vite": "^2.5.6"
   },
   "keywords": [
     "vite",
