--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@vue/compiler-sfc": "^3.2.11",
     "chalk": "^4.1.0",
     "concurrently": "^6.0.0",
-    "electron": "13.1.4",
+    "electron": "15.0.0-beta.3",
     "electron-builder": "^22.10.5",
     "electron-store": "^8.0.0",
     "minimist": "^1.2.5",
