--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@rollup/plugin-replace": "^3.0.0",
     "@rollup/plugin-typescript": "^8.2.5",
     "@types/minimist": "^1.2.1",
+    "@types/ws": "^8.2.0",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.2.11",
     "chalk": "^4.1.0",
@@ -71,7 +72,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
-    "vite": "^2.5.6"
+    "vite": "^2.5.6",
+    "ws": "^8.2.3"
   },
   "keywords": [
     "vite",
