--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@vue/compiler-sfc": "^3.2.11",
     "chalk": "^4.1.0",
     "concurrently": "^6.0.0",
-    "electron": "15.0.0-beta.3",
+    "electron": "15.3.0",
     "electron-builder": "^22.10.5",
     "minimist": "^1.2.5",
     "ora": "^5.4.0",
