chore(files): script -> scripts

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "dev": "concurrently -n=R,P,M -c=green,yellow,blue \"npm run dev:render\" \"npm run dev:preload\" \"npm run dev:main\"",
     "dev:render": "vite",
-    "dev:preload": "node -r ts-node/register script/build-preload --env=development --watch",
-    "dev:main": "node -r ts-node/register script/build-main --env=development --watch",
+    "dev:preload": "node -r ts-node/register scripts/build-preload --env=development --watch",
+    "dev:main": "node -r ts-node/register scripts/build-main --env=development --watch",
     "//": "---------------------------------------------------------------------------------------------------",
     "build:render": "vite build",
-    "build:preload": "node -r ts-node/register script/build-preload --env=production",
-    "build:main": "node -r ts-node/register script/build-main --env=production",
+    "build:preload": "node -r ts-node/register scripts/build-preload --env=production",
+    "build:main": "node -r ts-node/register scripts/build-main --env=production",
     "build": "rimraf dist && npm run build:render && npm run build:preload && npm run build:main && electron-builder"
   },
   "build": {
