--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "env": {
     "//": "Will be auto inject to main,renderer,preload process.env",
+    "HOST": "127.0.0.1",
     "PORT": 3344,
     "PORT_WS": 3355
   },
