--- a/package.json
+++ b/package.json
@@ -1,85 +1,31 @@
 {
-  "name": "electron-vue",
+  "name": "electron-vue-vite",
   "version": "0.0.1",
-  "main": "dist/main/index.js",
+  "main": "dist/main/index.cjs",
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "concurrently -n=R,P,M -c=green,yellow,blue \"npm run dev:render\" \"npm run dev:preload\" \"npm run dev:main\"",
-    "dev:render": "vite",
-    "dev:preload": "node -r ts-node/register scripts/build-preload --env=development --watch",
-    "dev:main": "node -r ts-node/register scripts/build-main --env=development --watch",
-    "//": "---------------------------------------------------------------------------------------------------",
-    "build:render": "vite build",
-    "build:preload": "node -r ts-node/register scripts/build-preload --env=production",
-    "build:main": "node -r ts-node/register scripts/build-main --env=production",
-    "build": "rimraf dist && npm run build:render && npm run build:preload && npm run build:main && electron-builder"
+    "dev": "node scripts/watch.mjs",
+    "build": "node scripts/build.mjs"
   },
-  "build": {
-    "appId": "308487730@qq.com",
-    "asar": true,
-    "directories": {
-      "output": "release/${version}"
-    },
-    "files": [
-      "!node_modules",
-      "dist/**"
-    ],
-    "mac": {
-      "artifactName": "${productName}_${version}.${ext}",
-      "target": [
-        "dmg"
-      ]
-    },
-    "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "artifactName": "${productName}_${version}.${ext}"
-    },
-    "nsis": {
-      "oneClick": false,
-      "perMachine": false,
-      "allowToChangeInstallationDirectory": true,
-      "deleteAppDataOnUninstall": false
-    }
+  "engines": {
+    "node": ">=14.17.0"
   },
   "dependencies": {
-    "vue": "^3.2.11"
+    "vue": "^3.2.21"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-replace": "^3.0.0",
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@types/minimist": "^1.2.1",
-    "@types/ws": "^8.2.0",
-    "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.2.11",
-    "chalk": "^4.1.0",
-    "concurrently": "^6.0.0",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "chalk": "^4.1.2",
     "electron": "15.3.0",
-    "electron-builder": "^22.10.5",
-    "minimist": "^1.2.5",
-    "ora": "^5.4.0",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2",
-    "vite": "^2.5.6",
-    "ws": "^8.2.3"
+    "electron-builder": "^22.13.1",
+    "typescript": "^4.4.4",
+    "vite": "^2.6.14"
   },
   "env": {
-    "//": "Will be auto inject to main,renderer,preload process.env",
+    "//": "Used in build scripts",
     "HOST": "127.0.0.1",
-    "PORT": 3344,
-    "PORT_WS": 3355
+    "PORT": 3344
   },
   "keywords": [
     "vite",
