chore: update engines.node

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "debug": "npm run prebuild && vite ./packages/renderer"
   },
   "engines": {
-    "node": ">=14.17.0"
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.1.0",
