feat(git-hooks): add nano-stage & git hooks

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "node scripts/watch.mjs",
-    "prebuild": "vue-tsc --project packages/renderer/tsconfig.json --noEmit && node scripts/build.mjs",
+    "typecheck": "vue-tsc --project packages/renderer/tsconfig.json --noEmit",
+    "prebuild": "npm run typecheck && node scripts/build.mjs",
+    "init": "git config core.hooksPath .git/hooks/ && rm -rf .git/hooks && npx simple-git-hooks",
     "build": "electron-builder",
     "debug": "npm run prebuild && vite ./packages/renderer",
     "test:e2e": "npx playwright test",
@@ -20,6 +22,8 @@
     "@vitejs/plugin-vue": "^2.1.0",
     "electron": "16.0.8",
     "electron-builder": "^22.14.5",
+    "nano-staged": "^0.6.0",
+    "simple-git-hooks": "^2.7.0",
     "typescript": "^4.5.5",
     "vite": "^2.7.13",
     "vite-plugin-resolve": "^1.6.1",
