--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.19.2",
+    "@types/sqlite3": "^3.1.8",
     "@vitejs/plugin-vue": "^2.1.0",
     "electron": "16.0.8",
     "electron-builder": "^22.14.5",
@@ -26,7 +27,7 @@
     "simple-git-hooks": "^2.7.0",
     "typescript": "^4.5.5",
     "vite": "^2.7.13",
-    "vite-plugin-resolve": "^1.6.1",
+    "vite-plugin-resolve": "^1.8.0",
     "vue": "^3.2.29",
     "vue-tsc": "^0.31.1"
   },
@@ -39,5 +40,8 @@
     "electron",
     "vue3",
     "rollup"
-  ]
+  ],
+  "dependencies": {
+    "sqlite3": "^5.0.2"
+  }
 }
