--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "VITE_DEV_SERVER_PORT": 3344
   },
   "keywords": [
-    "vite",
     "electron",
+    "rollup",
+    "vite",
     "vue3",
-    "rollup"
+    "vue"
   ]
 }
