--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "simple-git-hooks": "^2.7.0",
     "typescript": "^4.5.5",
     "vite": "^2.7.13",
+    "vite-plugin-electron-renderer": "^0.3.1",
     "vite-plugin-optimizer": "^1.1.4",
+    "vite-plugin-resolve": "^2.0.1",
     "vue": "^3.2.29",
     "vue-tsc": "^0.31.1"
   },
