--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,29 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules
-.DS_Store
 dist
 dist-ssr
 *.local
-.debug.env
 
-tmp
-**/.tmp
-release
+# Editor directories and files
+# .vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.vscode/.debug.env
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
