--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "paths": {},
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true
-  }
+  },
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
