--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@ dist-ssr
 *.local
 
 # Editor directories and files
-# .vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
@@ -23,6 +21,7 @@ dist-ssr
 *.sln
 *.sw?
 
+release
 .vscode/.debug.env
 package-lock.json
 pnpm-lock.yaml
