chore: add vite.config.electron.ts to include

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,5 +4,8 @@
     "module": "ESNext",
     "moduleResolution": "Node"
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.config.ts",
+    "vite.config.electron.ts"
+  ]
 }
