--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "electron": "^19.0.3",
     "electron-builder": "^23.0.3",
     "typescript": "^4.7.3",
-    "vite": "^2.9.13",
+    "vite": "^3.0.0-beta.5",
     "vite-plugin-electron": "^0.6.1",
     "vite-plugin-resolve": "^2.1.2",
     "vue": "^3.2.36",
