--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,9 +6,5 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "vite.config.ts",
-    "vite.config.electron.ts",
-    "package.json"
-  ]
+  "include": ["vite.config.ts", "electron", "package.json"]
 }
