--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "start .debug.script.mjs",
+      "label": "Before Debug",
       "type": "shell",
       "command": "node .vscode/.debug.script.mjs",
       "isBackground": true,
