--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,7 @@ name: Build
 
 on:
   push:
-  release:
     branches: [main]
-    types:
-      - published
     paths-ignore:
       - "**.md"
       - "**.spec.js"
@@ -15,7 +12,7 @@ on:
       - "Dockerfile"
       - ".gitignore"
       - ".github/**"
-      - "!.github/workflows/release.yml"
+      - "!.github/workflows/build.yml"
 
 jobs:
   build:
