fix: vue-tsc errors #189

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,5 +8,5 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "electron", "package.json"]
+  "include": ["vite.config.ts", "package.json"]
 }
