chore(Debug): increase timeout

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,7 +38,8 @@
       "name": "Debug Renderer Process",
       "port": 9229,
       "request": "attach",
-      "type": "pwa-chrome"
+      "type": "pwa-chrome",
+      "timeout": 60000
     },
   ]
 }
