--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true
   },
+  "include": ["src"],
   "references": [
     { "path": "./tsconfig.node.json" }
   ]
