--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,5 +11,5 @@
       "vite-plugin-electron/electron-env"
     ]
   },
-  "include": ["package.json", "electron", "src"]
+  "include": ["package.json", "electron"]
 }
