--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "debug": {
     "env": {
-      "VITE_DEV_SERVER_HOST": "127.0.0.1",
+      "VITE_DEV_SERVER_HOSTNAME": "127.0.0.1",
       "VITE_DEV_SERVER_PORT": 3344,
       "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344"
     }
